welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {
                           ^Program:8: error: not found: value int
	int = false
        ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
	for(k <- 0 to 6){
              ^