welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	
}


def vuBiscuit():Boolean = {
	int = false
	for(k <- 0 to 6){
		avance();
		if (estSurBiscuit){
			return true ;
		}else{
			return false;
		}
	}
}
